bynkc/tests/fixtures/negative/153_fn_type_in_capability_op/src/hof/caps.bynk
context hof.caps

capability Hof {
  fn run(f: Int -> Int) -> Effect[Int]
}

provides Hof = Impl {
  fn run(f: Int -> Int) -> Effect[Int] {
    Effect.pure(0)
  }
}
